--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -16,7 +16,8 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="VisualLintBounds">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -30,13 +31,14 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="100dp"
                 android:layout_marginBottom="24dp"
-                android:text="Estadísticas diarias"
+                android:text="@string/estad_sticas_diarias"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="TextSizeCheck" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -101,7 +103,7 @@
                             android:layout_marginLeft="12dp"
                             android:layout_marginRight="12dp"
                             android:layout_marginBottom="12dp"
-                            android:text="Raciones pagadas"
+                            android:text="@string/raciones_pagadas"
                             android:textSize="14sp" />
 
                     </LinearLayout>
@@ -130,7 +132,6 @@
                             android:background="@drawable/circle"
                             android:backgroundTint="@color/blue_dif"
                             android:gravity="center"
-                            android:text="TextView"
                             android:textSize="34sp"
                             android:textStyle="bold"
                             tools:text="15" />
@@ -143,7 +144,7 @@
                             android:layout_marginLeft="12dp"
                             android:layout_marginRight="12dp"
                             android:layout_marginBottom="12dp"
-                            android:text="Raciones donadas"
+                            android:text="@string/raciones_donadas"
                             android:textSize="14sp" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -178,7 +179,7 @@
                             android:layout_gravity="center"
                             android:layout_margin="12dp"
                             android:layout_weight="1"
-                            android:text="Comensales de hoy"
+                            android:text="@string/comensales_de_hoy"
                             android:textAlignment="center"
                             android:textSize="22sp" />
 
@@ -191,7 +192,6 @@
                             android:layout_marginRight="12dp"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="TextView"
                             android:textAlignment="center"
                             android:textSize="34sp"
                             tools:text="300" />
@@ -220,7 +220,7 @@
                             android:layout_gravity="center"
                             android:layout_margin="12dp"
                             android:layout_weight="1"
-                            android:text="Dinero recaudado"
+                            android:text="@string/dinero_recaudado"
                             android:textAlignment="center"
                             android:textSize="22sp" />
 
@@ -233,7 +233,6 @@
                             android:layout_marginRight="12dp"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="TextView"
                             android:textAlignment="center"
                             android:textColor="@android:color/holo_green_dark"
                             android:textSize="34sp"
